--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             </h1>
             <p>
                 Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
-                Elementum integer enim neque volutpat ac tincidunt vitae semper.
+                <strong>Elementum integer enim neque</strong> volutpat ac
+                tincidunt vitae semper.
             </p>
             <p class="links">
                 <a href="#">contact me</a> <a href="#">learn more about me</a>
