adding accent color to text using the span elelement

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="card">
             <h1>
-                Nisl suscipit adipiscing bibendum est ultricies integer quis
+                Nisl suscipit <span class="accent-color">adipiscing bibendum</span> est ultricies integer quis
                 auctor.
             </h1>
             <p>
