--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 tincidunt vitae semper.
             </p>
             <p class="links">
-                <a href="#">contact me</a> <a href="#">learn more about me</a>
+                <a class="links" href="#">contact me</a> <a href="#">learn more about me</a>
             </p>
         </div>
     </body>
