--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <body>
         <div class="card">
             <h1>
-                Nisl suscipit <span class="accent-color">adipiscing bibendum</span> est ultricies integer quis
-                auctor.
+                Nisl suscipit
+                <span class="accent-color">adipiscing bibendum</span> est
+                ultricies integer quis auctor.
             </h1>
             <p>
                 Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
@@ -15,7 +16,8 @@
                 tincidunt vitae semper.
             </p>
             <p class="links">
-                <a class="links" href="#">contact me</a> <a href="#">learn more about me</a>
+                <a class="link" href="#">contact me</a>
+                <a class="link" href="#">learn more about me</a>
             </p>
         </div>
     </body>
