Kevin's approach to style the links

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
                 ultricies integer quis auctor.
             </h1>
             <p>
-                Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
+                Netus et malesuada fames ac.
+                <a href="#">Sed cras ornare arcu dui vivamus</a>.
                 <strong>Elementum integer enim neque</strong> volutpat ac
                 tincidunt vitae semper.
             </p>
             <p class="links">
-                <a class="link" href="#">contact me</a>
+                <a href="#">contact me</a>
                 <a class="link" href="#">learn more about me</a>
             </p>
         </div>
