--- a/practice-css-fundamentals/index.html
+++ b/practice-css-fundamentals/index.html
@@ -6,7 +6,21 @@
         <title>Practice CSS Fundamentals</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body></body>
+    <body>
+        <h1>An awesome blog</h1>
+        <h2>An awesome blog post</h2>
+        <p>
+            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
+            kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+            amet.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr. Netus et
+            malesuada fames ac. Sed cras ornare arcu dui vivamus. Elementum
+            integer enim neque volutpat ac tincidunt vitae semper.
+        </p>
+        <a href="#">Read more...</a>
+    </body>
 </html>
 
 <!-- 
