--- a/practice-css-fundamentals/index.html
+++ b/practice-css-fundamentals/index.html
@@ -8,18 +8,29 @@
     </head>
     <body>
         <h1>An awesome blog</h1>
-        <h2>An awesome blog post</h2>
-        <p>
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
-            kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
-            amet.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr. Netus et
-            malesuada fames ac. Sed cras ornare arcu dui vivamus. Elementum
-            integer enim neque volutpat ac tincidunt vitae semper.
-        </p>
-        <a href="#">Read more...</a>
+
+        <div class="blog-post">
+            <h2>An awesome blog post</h2>
+
+            <img src="images/window.png" alt="a bright window on a blue wall" />
+
+            <p>
+                At vero eos et
+                <a href="#" class="accent-color">accusam et justo duo</a>
+                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                sanctus est Lorem ipsum dolor sit amet.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr. Netus
+                et malesuada fames ac.
+                <a href="#" class="accent-color">Sed cras ornare</a> arcu dui
+                vivamus. Elementum integer enim neque volutpat ac tincidunt
+                vitae semper.
+            </p>
+            <p class="read-more">
+                <a href="#" class="accent-color">Read more...</a>
+            </p>
+        </div>
     </body>
 </html>
 
