--- a/css-fundamentals/index.html
+++ b/css-fundamentals/index.html
@@ -17,8 +17,8 @@
                 tincidunt vitae semper.
             </p>
             <p class="links">
-                <a href="#">contact me</a>
-                <a class="link" href="#">learn more about me</a>
+                <a class="button" href="#">contact me</a>
+                <a class="button" class="link" href="#">learn more about me</a>
             </p>
         </div>
     </body>
