--- a/css-fundamentals/index.html
+++ b/css-fundamentals/index.html
@@ -20,6 +20,14 @@
                 <a class="button" href="#">contact me</a>
                 <a class="button" class="link" href="#">learn more about me</a>
             </p>
+
+            <p class="button">
+                <a href="#">contact me</a>
+            </p>
+
+            <p class="button">
+                <a class="link" href="#">learn more about me</a>
+            </p>
         </div>
     </body>
 </html>
