styles was defined as element, classes and id to show the specificity

--- a/css-fundamentals/index.html
+++ b/css-fundamentals/index.html
@@ -10,7 +10,7 @@
                 <span class="accent-color">adipiscing bibendum</span> est
                 ultricies integer quis auctor.
             </h1>
-            <p>
+            <p class="test" id="test">
                 Netus et malesuada fames ac.
                 <a href="#">Sed cras ornare arcu dui vivamus</a>.
                 <strong>Elementum integer enim neque</strong> volutpat ac
