The basic markup structure was added

--- a/css-fundamentals/layout-2/index.html
+++ b/css-fundamentals/layout-2/index.html
@@ -2,5 +2,23 @@
     <head>
         <link rel="stylesheet" href="css/style.css" />
     </head>
-    <body></body>
+    <body>
+        <header>
+            <h1></h1>
+        </header>
+
+        <section class="section-one">
+            <h2></h2>
+            <p></p>
+            <a href="#" class="btn"></a>
+            <a href="#" class="btn"></a>
+        </section>
+
+        <section class="section-two">
+            <h2></h2>
+            <p></p>
+            <a href="#" class="btn"></a>
+            <a href="#" class="btn"></a>
+        </section>
+    </body>
 </html>
