--- a/css-fundamentals/layout-2/index.html
+++ b/css-fundamentals/layout-2/index.html
@@ -13,8 +13,8 @@
                 Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
                 Elementum integer enim neque volutpat ac tincidunt vitae semper.
             </p>
-            <a href="#" class="btn">contact me</a>
-            <a href="#" class="btn">learn more about me</a>
+            <a href="#" class="btn-yellow">contact me</a>
+            <a href="#" class="btn-yellow">learn more about me</a>
         </section>
 
         <section class="section-two">
@@ -23,8 +23,8 @@
                 Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
                 Elementum integer enim neque volutpat ac tincidunt vitae semper.
             </p>
-            <a href="#" class="btn">contact me</a>
-            <a href="#" class="btn">learn more about me</a>
+            <a href="#" class="btn-black">contact me</a>
+            <a href="#" class="btn-black">learn more about me</a>
         </section>
     </body>
 </html>
