--- a/css-fundamentals/layout-2/index.html
+++ b/css-fundamentals/layout-2/index.html
@@ -20,8 +20,10 @@
         <section class="section-two">
             <h2>Section two title</h2>
             <p>
-                Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
-                Elementum integer enim neque volutpat ac tincidunt vitae semper.
+                Netus et malesuada fames ac.
+                <a href="#" class="section-two-link">Sed cras ornare arcu</a>
+                dui vivamus. Elementum integer enim neque volutpat ac tincidunt
+                vitae semper.
             </p>
             <a href="#" class="btn-black">contact me</a>
             <a href="#" class="btn-black">learn more about me</a>
