--- a/css-fundamentals/layout-2/index.html
+++ b/css-fundamentals/layout-2/index.html
@@ -10,11 +10,12 @@
         <section class="section-one">
             <h2>Section one title</h2>
             <p>
-                Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
-                Elementum integer enim neque volutpat ac tincidunt vitae semper.
+                Netus et malesuada fames ac.
+                <a href="#">Sed cras ornare arcu</a> dui vivamus. Elementum
+                integer enim neque volutpat ac tincidunt vitae semper.
             </p>
-            <a href="#" class="btn">contact me</a>
-            <a href="#" class="btn">learn more about me</a>
+            <a href="#" class="btn btn-accent">contact me</a>
+            <a href="#" class="btn btn-accent">learn more about me</a>
         </section>
 
         <section class="section-two">
@@ -25,8 +26,8 @@
                 dui vivamus. Elementum integer enim neque volutpat ac tincidunt
                 vitae semper.
             </p>
-            <a href="#" class="btn">contact me</a>
-            <a href="#" class="btn">learn more about me</a>
+            <a href="#" class="btn btn-dark">contact me</a>
+            <a href="#" class="btn btn-dark">learn more about me</a>
         </section>
     </body>
 </html>
