--- a/css-fundamentals/layout-2/index.html
+++ b/css-fundamentals/layout-2/index.html
@@ -1,5 +1,11 @@
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
