basic section on the markup were added

--- a/css-fundamentals/layout-3/index.html
+++ b/css-fundamentals/layout-3/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Layout 03</title>
+    </head>
+    <body>
+        <header class="main-header"></header>
+
+        <section class="section-one"></section>
+
+        <section class="section-two"></section>
+    </body>
+</html>
+
 <!-- 
     
 CSS is a lot of fun
