--- a/css-fundamentals/layout-3/index.html
+++ b/css-fundamentals/layout-3/index.html
@@ -6,11 +6,42 @@
         <title>Layout 03</title>
     </head>
     <body>
-        <header class="main-header"></header>
+        <header>
+            <h1>CSS is a lot of fun</h1>
+        </header>
 
-        <section class="section-one"></section>
+        <section class="section-one">
+            <h2>Section One Title.</h2>
 
-        <section class="section-two"></section>
+            <img
+                src="images/boardwalk.png"
+                alt="A man walking on the street, street light are closer to him"
+            />
+
+            <p>
+                Netus et malesuada fames ac.
+                <a href="#">Sed cras ornare arcu</a> dui vivamus.
+                <strong>Elementum integer enim neque</strong> volutpat ac
+                tincidunt vitae semper.
+            </p>
+        </section>
+
+        <section class="section-two">
+            <h2>Section Two Title.</h2>
+
+            <p>
+                Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
+                Elementum integer enim neque volutpat ac tincidunt vitae semper.
+            </p>
+
+            <p>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                diam nonumy eirmod tempor invidunt ut labore et dolore.
+            </p>
+
+            <a href="">contact us</a>
+            <a href="">more info</a>
+        </section>
     </body>
 </html>
 
