--- a/css-fundamentals/layout-3/index.html
+++ b/css-fundamentals/layout-3/index.html
@@ -17,40 +17,47 @@
     </head>
     <body>
         <header>
-            <h1>CSS is a lot of fun</h1>
+            <div class="container">
+                <h1>CSS is a lot of fun</h1>
+            </div>
         </header>
 
         <section class="section-one">
-            <h2>Section One Title.</h2>
+            <div class="container">
+                <h2>Section One Title.</h2>
 
-            <img
-                src="images/boardwalk.png"
-                alt="A man walking on the street, street light are closer to him"
-            />
+                <img
+                    src="images/boardwalk.png"
+                    alt="A man walking on the street, street light are closer to him"
+                />
 
-            <p>
-                Netus et malesuada fames ac.
-                <a href="#">Sed cras ornare arcu</a> dui vivamus.
-                <strong>Elementum integer enim neque</strong> volutpat ac
-                tincidunt vitae semper.
-            </p>
+                <p>
+                    Netus et malesuada fames ac.
+                    <a href="#">Sed cras ornare arcu</a> dui vivamus.
+                    <strong>Elementum integer enim neque</strong> volutpat ac
+                    tincidunt vitae semper.
+                </p>
+            </div>
         </section>
 
         <section class="section-two">
-            <h2>Section Two Title.</h2>
+            <div class="container">
+                <h2>Section Two Title.</h2>
 
-            <p>
-                Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
-                Elementum integer enim neque volutpat ac tincidunt vitae semper.
-            </p>
+                <p>
+                    Netus et malesuada fames ac. Sed cras ornare arcu dui
+                    vivamus. Elementum integer enim neque volutpat ac tincidunt
+                    vitae semper.
+                </p>
 
-            <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                diam nonumy eirmod tempor invidunt ut labore et dolore.
-            </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                    diam nonumy eirmod tempor invidunt ut labore et dolore.
+                </p>
 
-            <a href="">contact us</a>
-            <a href="">more info</a>
+                <a href="">contact us</a>
+                <a href="">more info</a>
+            </div>
         </section>
     </body>
 </html>
