Kevin use class name for the section two links

--- a/css-fundamentals/layout-3/index.html
+++ b/css-fundamentals/layout-3/index.html
@@ -55,8 +55,8 @@
                     diam nonumy eirmod tempor invidunt ut labore et dolore.
                 </p>
 
-                <a href="">contact us</a>
-                <a href="">more info</a>
+                <a href="" class="btn btn-accent">contact us</a>
+                <a href="" class="btn btn-white">more info</a>
             </div>
         </section>
     </body>
