--- a/css-fundamentals/layout-1/index.html
+++ b/css-fundamentals/layout-1/index.html
@@ -23,3 +23,14 @@
         </div>
     </body>
 </html>
+
+<!-- 
+
+        Nisl suscipit adipiscing bibendum est ultricies integer auctor. 
+        
+        Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus Elementum integer enim neque volutpat ac tincidunt vitae semper.
+
+        contact me
+        learn more about me
+
+-->
