--- a/css-fundamentals/layout-2/index.html
+++ b/css-fundamentals/layout-2/index.html
@@ -37,3 +37,26 @@
         </section>
     </body>
 </html>
+
+<!-- 
+
+Compound selectors can be useful
+
+Section one title
+
+Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.
+
+contact me
+learn more about me
+
+
+
+
+Section two title
+    
+Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.
+
+contact me
+learn more about me
+
+-->
