my answer for final css fundamentals challenge - layout 3

--- a/css-fundamentals/layout-3/index.html
+++ b/css-fundamentals/layout-3/index.html
@@ -21,7 +21,7 @@
 
         <section class="section-one">
             <div class="container">
-                <h2>Section One Title.</h2>
+                <h2 class="accent-color">Section One Title.</h2>
 
                 <img
                     src="images/boardwalk.png"
@@ -30,7 +30,8 @@
 
                 <p>
                     Netus et malesuada fames ac.
-                    <a href="#">Sed cras ornare arcu</a> dui vivamus.
+                    <a href="#" class="accent-color">Sed cras ornare arcu</a>
+                    dui vivamus.
                     <strong>Elementum integer enim neque</strong> volutpat ac
                     tincidunt vitae semper.
                 </p>
@@ -39,7 +40,7 @@
 
         <section class="section-two">
             <div class="container">
-                <h2>Section Two Title.</h2>
+                <h2 class="accent-color">Section Two Title.</h2>
 
                 <p>
                     Netus et malesuada fames ac. Sed cras ornare arcu dui
@@ -48,8 +49,10 @@
                 </p>
 
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore et dolore.
+                    Lorem
+                    <a href="#" class="accent-color">ipsum dolor sit amet</a>,
+                    consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                    invidunt ut labore et dolore.
                 </p>
 
                 <a href="" class="btn btn-accent">contact us</a>
