--- a/css-fundamentals/layout-3/index.html
+++ b/css-fundamentals/layout-3/index.html
@@ -10,7 +10,7 @@
 
         <title>Layout 03</title>
 
-        <link rel="stylesheet" href="css/style.css" />
+        <link href="css/style.css" rel="stylesheet" />
     </head>
     <body>
         <header>
