Extra class was created to shrink and grow the the font size

--- a/think-responsively/ems-rems/index.html
+++ b/think-responsively/ems-rems/index.html
@@ -17,8 +17,8 @@
                 tincidunt vitae semper.
             </p>
             <p class="links">
-                <a class="button" href="#">contact me</a>
-                <a class="button" class="link" href="#">learn more about me</a>
+                <a class="button btn-big" href="#">contact me</a>
+                <a class="button btn-small" class="link" href="#">learn more about me</a>
             </p>
         </div>
     </body>
