--- a/think-responsively/ems-rems/index.html
+++ b/think-responsively/ems-rems/index.html
@@ -18,6 +18,7 @@
             </p>
             <p class="links">
                 <a class="button btn-big" href="#">contact me</a>
+                <a class="button" href="#">Default</a>
                 <a class="button btn-small" class="link" href="#">learn more about me</a>
             </p>
         </div>
