padding was added using em unit

--- a/think-responsively/ems-rems/index.html
+++ b/think-responsively/ems-rems/index.html
@@ -19,7 +19,7 @@
             <p class="links">
                 <a class="button btn-big" href="#">contact me</a>
                 <a class="button" href="#">Default</a>
-                <a class="button btn-small" class="link" href="#">learn more about me</a>
+                <a class="button btn-small" class="link" href="#">about me</a>
             </p>
         </div>
     </body>
