--- a/think-responsively/layout-5/index.html
+++ b/think-responsively/layout-5/index.html
@@ -5,7 +5,20 @@
     </head>
     <body> 
 
-        
+        <header>
+            <div class="site-title">
+                <h1>Living the social life</h1>
+                <p class="title">A blog exploring minimalism in life</p>
+            </div>
+
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About me</a></li>
+                    <li><a href="#">Recent posts</a></li>
+                </ul>
+            </nav>
+        </header>
         
     </body>
 </html>
