change the class name in the markup and add the font size

--- a/think-responsively/layout-5/index.html
+++ b/think-responsively/layout-5/index.html
@@ -8,7 +8,7 @@
         <header>
             <div class="site-title">
                 <h1>Living the social life</h1>
-                <p class="title">A blog exploring minimalism in life</p>
+                <p class="subtitle">A blog exploring minimalism in life</p>
             </div>
 
             <nav>
