--- a/think-responsively/layout-5/index.html
+++ b/think-responsively/layout-5/index.html
@@ -13,7 +13,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#" class="current-page">Home</a></li>
                     <li><a href="#">About me</a></li>
                     <li><a href="#">Recent posts</a></li>
                 </ul>
