--- a/think-responsively/layout-5/index.html
+++ b/think-responsively/layout-5/index.html
@@ -6,7 +6,7 @@
     <body> 
 
         <header>
-            <div class="container">
+            <div class="container container-nav">
                 <div class="site-title">
                     <h1>Living the social life</h1>
                     <p class="subtitle">A blog exploring minimalism in life</p>
